--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.0",
     "description": "chrome-driver",
     "main": "js/index",
+    "types": "js/index.d.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
